--- a/synchronized_panels.html
+++ b/synchronized_panels.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="synchronized_panels.css">
 
   <script src="voice_utils.js"></script>
+  <script src="components.js"></script>
   <script src="synchronized_panels.js"></script>
 
 </head>
