--- a/src/renderer/synchronized_panels.html
+++ b/src/renderer/synchronized_panels.html
@@ -86,6 +86,9 @@
         <button id="pause-button" class="icon active" onClick="IconsPanel.onPause()"
             data-tooltip="Pause the speaking">&#9208;</button>
 
+        <button id="search-button" class="icon" onClick="IconsPanel.onSearch()"
+            data-tooltip="Search within a line">&#x1F50D;</button>
+
         <!-- <button id="edit-button" class="icon">&#9998;</button> -->
         <button id="save-button" class="icon" onclick="IconsPanel.onSave()"
             data-tooltip="Save the changes made">&#128190;</button>
