--- a/src/renderer/synchronized_panels.html
+++ b/src/renderer/synchronized_panels.html
@@ -57,7 +57,7 @@
       </div>
 
       <div id="image-panel">
-        <img id="image" alt="image" tooltip="Handwritten image" onLoad="GifPanel.onImageLoadComplete()"/>
+        <img id="image" alt="image" tooltip="Handwritten image"/>
         <div id="image-hilite" tooltip="Current line"></div>
         <div id="magnifier">
           <div id="magnified-image"></div>
@@ -107,7 +107,7 @@
       </div>
 
       <div id="text-panel">
-        <div id="text-container"  contenteditable="true" onscroll="scrollOtherBar();"></div>
+        <div id="text-container"  contenteditable="true"></div>
         <!-- <div id="text-container"  contenteditable="true"></div> -->
       </div>
 
