--- a/src/renderer/synchronized_panels.html
+++ b/src/renderer/synchronized_panels.html
@@ -57,12 +57,14 @@
       </div>
 
       <div id="image-panel">
-        <img id="image" alt="image" tooltip="Handwritten image"/>
+        <div id="image-hilite" tooltip="Current line"></div>
         <div id="magnifier">
           <div id="magnified-image"></div>
         </div>
+        <div id="image-container">
+          <img id="image" alt="image" tooltip="Handwritten image"/>
+        </div>
       </div>
-      <div id="image-hilite" tooltip="Current line"></div>
 
     </div>
     
